--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
-  "name": "learn-css",
+  "name": "chef-services",
+  "private": true,
   "version": "1.0.0",
-  "main": "index.html",
   "scripts": {
-    "watch": "sass --watch src/sass:src/css",
-    "build:sass": "sass --no-source-map src/sass:src/css",
-    "build:css": "postcss src/css/*.css --use autoprefixer --use cssnano --no-map -r",
-    "build": "npm-run-all build:*"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "author": "Le Dung",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "cssnano": "^7.0.6",
-    "npm-run-all": "^4.1.5",
-    "postcss-cli": "^11.0.0",
-    "sass": "^1.81.0"
+    "sass": "^1.81.0",
+    "vite": "^2.9.18",
+    "vite-plugin-html-purgecss": "^0.1.1"
   }
 }
